TG-58 Fix for truncated title

--- a/src/pages/ln-list/ln-list.scss
+++ b/src/pages/ln-list/ln-list.scss
@@ -1,9 +1,12 @@
 page-ln-list {
     ion-item {
-        & h5 {
-            overflow-x: hidden;
+        & ion-label{
             overflow-y: visible;
+            overflow-x: hidden;
+        }
+        & h5 {
             text-overflow: ellipsis;
+            padding-top: 2px;
         }
     }
 }
